--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Cabin&display=swap');
-body {
-  background:rgba(0, 0, 0, 0) radial-gradient(circle at center top, rgb(247, 243, 245), rgb(243, 237, 240)) repeat fixed 0% 0% / cover;
+/*body {
   font-family: "Cabin";
-}
+} */
